feat: add more components

--- a/package.json
+++ b/package.json
@@ -11,17 +11,24 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@fontsource/sora": "^5.0.16",
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@nasa-gcn/remix-seo": "^2.0.0",
+    "@nextui-org/accordion": "^2.0.28",
     "@nextui-org/avatar": "^2.0.24",
+    "@nextui-org/badge": "^2.0.24",
     "@nextui-org/button": "^2.0.26",
     "@nextui-org/card": "^2.0.24",
+    "@nextui-org/checkbox": "^2.0.25",
     "@nextui-org/chip": "^2.0.25",
     "@nextui-org/divider": "^2.0.25",
     "@nextui-org/image": "^2.0.24",
     "@nextui-org/input": "^2.1.16",
+    "@nextui-org/kbd": "^2.0.25",
     "@nextui-org/link": "^2.0.26",
     "@nextui-org/pagination": "^2.0.26",
+    "@nextui-org/progress": "^2.0.24",
+    "@nextui-org/skeleton": "^2.0.24",
     "@nextui-org/spacer": "^2.0.24",
     "@nextui-org/switch": "^2.0.25",
     "@nextui-org/system": "^2.0.15",
@@ -32,6 +39,8 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@react-hookz/web": "^24.0.2",
     "@remix-pwa/cache": "^2.0.12",
     "@remix-pwa/sw": "^2.1.12",
@@ -51,6 +60,7 @@
     "isbot": "^4.1.0",
     "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
+    "photoswipe": "^5.4.3",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
