--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@consumet/extensions": "^1.5.4",
+    "@esbuild-plugins/node-resolve": "^0.2.2",
     "@fontsource/sora": "^5.0.16",
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@nasa-gcn/remix-seo": "^2.0.0",
@@ -50,6 +52,7 @@
     "@remix-run/serve": "^2.5.1",
     "@supabase/supabase-js": "^2.39.3",
     "@types/nprogress": "^0.2.3",
+    "@types/swiper": "^6.0.0",
     "artplayer": "^5.1.1",
     "dashjs": "^4.7.3",
     "framer-motion": "^11.0.3",
@@ -57,8 +60,9 @@
     "i18next": "^23.7.20",
     "i18next-fs-backend": "^2.3.1",
     "is-ip": "^5.0.1",
-    "isbot": "^4.1.0",
+    "isbot": "^4.4.0",
     "next-themes": "^0.2.1",
+    "node-vibrant": "^3.2.1-alpha.1",
     "nprogress": "^0.2.0",
     "photoswipe": "^5.4.3",
     "react": "^18.2.0",
@@ -85,6 +89,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/tinycolor2": "^1.4.6",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "css-loader": "^6.9.1",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -92,6 +97,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "style-loader": "^3.3.4",
     "typescript": "^5.1.6"
   },
   "engines": {
