--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "i18next": "^23.7.20",
     "i18next-fs-backend": "^2.3.1",
     "is-ip": "^5.0.1",
-    "isbot": "^4.4.0",
+    "isbot": "3.7.0",
     "next-themes": "^0.2.1",
     "node-vibrant": "^3.2.1-alpha.1",
     "nprogress": "^0.2.0",
